<resources>
    <string name="app_name" translatable="false">Orgs</string>

    <string name="text_logo_orgs">Logo do app Orgs</string>
    <string name="text_bem_vindo">Bem-vindo(a) ao Orgs</string>
    <string name="text_bem_vindo_de_volta">Bem-vindo(a) de volta</string>
    <string name="text_explore_pelos_melhores_produtos">Explore pelos melhores produtores orgânicos.</string>
    <string name="text_preencha_as_informacoes">Preencha as informações abaixo</string>
    <string name="text_acesse_sua_conta">Acesse sua conta usando seu usuário cadastrado.</string>
    <string name="text_nome">Nome</string>
    <string name="text_usuario">Usuário</string>
    <string name="text_email">Email</string>
    <string name="text_senha">Senha</string>
    <string name="text_entrar">Entrar</string>
    <string name="text_cadastrar">Cadastrar</string>
    <string name="text_descricao">Descrição</string>
    <string name="text_valor">Valor</string>
    <string name="text_salvar">Salvar</string>
    <string name="text_carregar">Carregar</string>
    <string name="text_cancelar">Cancelar</string>
    <string name="text_perfil">Perfil de Usuário</string>
    <string name="text_editar">Editar</string>
    <string name="text_remover">Remover</string>
    <string name="text_ordenar">Ordenar</string>
    <string name="text_configuracoes">Configurações</string>
    <string name="text_idioma">Idioma</string>
    <string name="text_idioma_en_usa">Inglês (USA)</string>
    <string name="text_idioma_es">Espanhol</string>
    <string name="text_idioma_pt_br">Português (BR)</string>
    <string name="text_produto_sem_nome">Produto sem nome</string>
    <string name="text_produto_sem_descricao">Produto sem descrição</string>
    <string name="text_cadastrar_usuario">Cadastrar usuário</string>
    <string name="text_cadastrar_produto">Cadastrar Produto</string>
    <string name="text_alterar_produto">Alterar Produto</string>
    <string name="text_novo_produto">Novo Produto</string>
    <string name="text_sair_do_app">Sair do app</string>
    <string name="text_url_imagem">URL da imagem</string>
    <string name="text_inserir_imagem">Inserir Imagem</string>
    <string name="text_nome_decrescente">nome decrescente</string>
    <string name="text_nome_crescente">nome crescente</string>
    <string name="text_descricao_decrescente">descricao decrescente</string>
    <string name="text_descricao_crescente">descricao crescente</string>
    <string name="text_valor_decrescente">valor decrescente</string>
    <string name="text_valor_crescente">valor crescente</string>
    <string name="text_sem_ordem">Sem ordem</string>
    <string name="text_comprar_cesta">Comprar cesta</string>
    <string name="text_pesquisar">Pesquisar</string>
    <string name="text_entrega_rapida">Entrega Rápida</string>
    <string name="text_veja_as_melhores_da_semana">Veja as melhores da semana</string>
    <string name="text_ver">Ver</string>
    <string name="text_cestas_populares">Cestas Populares</string>
    <string name="text_mais_produtores">Mais produtores</string>
</resources>