<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.activity.LoginActivity"
            android:background="@drawable/background">

        <TextView
                android:id="@+id/activity_login_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/text_bem_vindo_de_volta"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/blackLight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        />

        <TextView
                android:id="@+id/activity_login_subtexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/text_acesse_sua_conta"
                android:textSize="16sp"
                android:textColor="@color/blackLight"
                app:layout_constraintStart_toStartOf="@id/activity_login_titulo"
                app:layout_constraintEnd_toEndOf="@id/activity_login_titulo"
                app:layout_constraintTop_toBottomOf="@id/activity_login_titulo"
        />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputlayout_usuario"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_login_subtexto"
                app:boxStrokeColor="@color/blackLight">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_login_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_usuario"
                    android:textColor="@color/blackLight"
                    android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputlayout_senha"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputlayout_usuario"
                app:boxStrokeColor="@color/blackLight">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_login_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_senha"
                    android:textColor="@color/blackLight"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/activity_login_botao_entrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_entrar"
                app:layout_constraintEnd_toEndOf="@id/textInputlayout_senha"
                app:layout_constraintStart_toStartOf="@id/textInputlayout_senha"
                app:layout_constraintTop_toBottomOf="@id/textInputlayout_senha"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>